# ambi

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md
include/: config.h
src/: ambi_client.c  ambi_daemon.c  main.c
